--- a/.github/workflows/deploy_docs.yaml
+++ b/.github/workflows/deploy_docs.yaml
@@ -93,7 +93,7 @@ jobs:
         coscmd upload docs-dist-${DOCS_TYPE}-${VERSION}.zip docs-zip/
         sleep 90
 
-    - name: flush CDN
+    - name: flush cdn
       run: |
         pip3 install tccli
         tccli configure set secretId ${{ secrets.COS_ID }}
@@ -108,7 +108,7 @@ jobs:
         repository: 'Swilder-M/docsearch-scraper-simple'
         path: docsearch
 
-    - name: Install pipenv
+    - name: install pipenv
       run: |
           python -m pip install --upgrade pipenv wheel
 
@@ -125,7 +125,7 @@ jobs:
         pipenv install --keep-outdated
 
     - name: update current version
-      if: ${{ env.VERSION == 'latest' }}
+      if: env.VERSION == 'latest'
       env:
         APPLICATION_ID: ${{ secrets.DOCS_APPLICATION_ID }}
         API_KEY: ${{ secrets.DOCS_API_KEY }}
