--- a/.github/workflows/deploy_docs.yaml
+++ b/.github/workflows/deploy_docs.yaml
@@ -71,7 +71,7 @@ jobs:
         rm frontend/index.md || true
         mkdir -p frontend/docs/en/${DOCS_TYPE}/${VERSION}/
         mkdir -p frontend/docs/zh/${DOCS_TYPE}/${VERSION}/
-        mkdir -p frontend/docs/.vitepress/public/api/
+        mkdir -p frontend/docs/public/api/
         cp -r docs-files/en_US/* frontend/docs/en/${DOCS_TYPE}/${VERSION}/
         cp -r docs-files/zh_CN/* frontend/docs/zh/${DOCS_TYPE}/${VERSION}/
         cp docs-files/directory.json frontend/docs/.vitepress/config/directory.json
@@ -79,8 +79,8 @@ jobs:
     - name: generate version config
       run: |
         cd docs-files
-        python3 .github/scripts/generate_version.py $(git tag | egrep "v[0-9](\.[0-9])*$" | xargs echo -n) > ../frontend/docs/.vitepress/public/api/${DOCS_TYPE}_versions.json
-        cat ../frontend/docs/.vitepress/public/api/${DOCS_TYPE}_versions.json
+        python3 .github/scripts/generate_version.py $(git tag | egrep "v[0-9](\.[0-9])*$" | xargs echo -n) > ../frontend/docs/public/api/${DOCS_TYPE}_versions.json
+        cat ../frontend/docs/public/api/${DOCS_TYPE}_versions.json
 
     - name: build docs
       run: |
