--- a/.github/workflows/deploy_docs.yaml
+++ b/.github/workflows/deploy_docs.yaml
@@ -78,7 +78,7 @@ jobs:
     - name: generate version config
       run: |
         cd docs-files
-        python3 .github/scripts/generate_version.py $(git tag | egrep "v[0-9]+\.[0-9]+$" | xargs echo -n) > ../frontend/docs/public/api/${DOCS_TYPE}_versions.json
+        python3 .github/scripts/generate_version.py $(git tag | egrep "v[0-9]$" | xargs echo -n) > ../frontend/docs/public/api/${DOCS_TYPE}_versions.json
         cat ../frontend/docs/public/api/${DOCS_TYPE}_versions.json
 
     - name: build docs
